# custom-connectors

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  pyproject.toml
src/custom_connectors/: __init__.py  py.typed
src/custom_connectors/core/: __init__.py  exceptions.py
tests/: __init__.py  conftest.py
tests/test_core/: __init__.py  test_exceptions.py
yotpo-loyalty-profiles/: yotpo_python_script.dig
yotpo-loyalty-profiles/python/yotpo/: main.py
